--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,13 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "joi": "^17.9.2"
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.1"
   }
 }
